# TaxSolver

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  build_env.sh  pyproject.toml
.github/workflows/: main.yml
data/example/: simple_simul_1000.xlsx
notebooks/: example_notebook.ipynb  readme_notebook.ipynb
paper/: case_1.ipynb  case_2.ipynb  case_3.ipynb  case_helpers.py
paper_reproduction/: .gitignore  README.md  case_helpers.py  data_simulator.py  fig05_case1_single_rule.ipynb  fig06_case2_multi_rule.ipynb  fig07_case3_multi_group.ipynb  fig08_behavioral_effects.ipynb  fig09_10_dutch_case_study.ipynb  fig12_guarantee_frontier.ipynb  make_table_descriptives_nl.py  make_table_reform_schedules.py  make_table_rows.py  nld_rule_book.py  parameters.py  run_iis_demo.py  run_stats_behavioral.py  run_stats_nl.py  run_stats_nl_gamma65_extended.py  run_stats_scaling.py  run_stats_small.py  solve_stats.py
src/TaxSolver/: __init__.py  brackets.py  objective.py  rule.py  tax_solver.py
src/TaxSolver/backend/: __init__.py  abstract_backend.py  cvxpy_backend.py  gurobi_backend.py
src/TaxSolver/constraints/: __init__.py  behavioral_effects.py  bracket_constraint.py  budget_constraint.py  constraint.py  income_constraint.py  labor_effects.py  marginal_pressure_constraint.py  rule_constraints.py
src/TaxSolver/data_wrangling/: bracket_input.py  data_loader.py
tests/: conftest.py  test_basic_small.py  test_data_loader.py  test_generate_rules.py  test_progressive_income_tax.py  test_progressive_marginal_rate.py
tests/e2e/: test_10_housing_aow_kids_partner_assets_weighted.py  test_11_readme_bracketrule.py  test_12_readme_flattaxrule.py  test_13_case1.py  test_14_backend_comparison.py  test_1_ipo_employment_only.py  test_2_ipo_zzp_only.py  test_3_ipo_employent_and_zzp.py  test_4_renter.py  test_5_homeowner.py  test_6_homeowner_renter_aow.py  test_7_housing_aow_kids.py  test_8_housing_aow_kids_partner.py  test_9_housing_aow_kids_partner_assets.py
tests/helpers/: nld_rule_book.py  scenario_helper.py
tests/labor_effects/: labor_effects_hh_test.xlsx  labor_effects_hh_test_rel.xlsx  labor_effects_incl_irrelevant_hh.xlsx  test_labor_effects.py  test_mini.py
tests/minimal_example/: test_minimal_example.py
tests/optimalisation/: test_brackets.py  test_pretax.py  test_rule_constraints.py  test_rules.py
(+16 files in other folders)
